--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,3 +6,12 @@ services:
       - '27017:27017'
   newspaper-api:
     image: smarp/newspaper-api
+    ports:
+      - '5000:38765'
+  newspaper3k-docker:
+    image: prananth/newspaper3k-docker
+    environment:
+      - 'PATH=/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
+      - FLASK_APP=news.py
+    ports:
+      - '80:80'
