--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '2'
 services:
+  rss-to-db:
+    container_name: "rss-to-db"
+    environment:
+      - MONGO_PORT=27117
+    env_file: #not working in this version of docker-compose
+     - .env
+    build: .
   mongo:
     image: mongo
     ports:
       - "27117:27017"
-  rss_to_db:
-    env_file:
-     - .env
-    build: .
+
+    #environment:
+    #  - MONGO_DATA_DIR=/data/db
+    #  - MONGO_LOG_DIR=/dev/null
+    #volumes:
+    #  - ./data/db:/data/db
+    command: mongod --logpath=/dev/null # --quiet
