--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
-version: '2'
+version: '3'
 services:
   rss-to-db:
     container_name: "rss-to-db"
+    image: "rss-to-db"
     environment:
-      - MONGO_PORT=27117
-    env_file: #not working in this version of docker-compose
+      WAIT_HOSTS: mongo:27017
+    env_file: # Non funcionan estas variables non sei porqué
      - .env
+    depends_on:
+    - "mongo"
     build: .
+
   mongo:
     image: mongo
     ports:
-      - "27117:27017"
+      - "27017:27017"
 
     #environment:
     #  - MONGO_DATA_DIR=/data/db
     #  - MONGO_LOG_DIR=/dev/null
     #volumes:
     #  - ./data/db:/data/db
-    command: mongod --logpath=/dev/null # --quiet
+    command: mongod --user mongodb --logpath=/dev/null # --quiet
