Post_to_wp use saved_at datetime

--- a/data/feeds/sextograo.conf
+++ b/data/feeds/sextograo.conf
@@ -1,1 +1,1 @@
-{"url": "https://feeds.feedburner.com/SextoGrao", "name": "sextograo", "collection": "sextograo", "etag": "2sA/WfrczD3fnimL1BmBg7uUnCc", "modified": "", "last_time_item": 1572249713.0}
+{"url": "https://feeds.feedburner.com/SextoGrao", "name": "sextograo", "collection": "sextograo", "etag": "1c1Vi/3CQ8appCBCTBUA8qf/j/E", "modified": "Sun, 26 Jan 2020 22:33:50 GMT", "last_time_item": 1572249713.0}
