--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-COMPOSE_PROJECT_NAME=full_rsstodb
+COMPOSE_PROJECT_NAME=rsstodb_podgalego
+DB_TYPE=FILE
 DB_PORT=27017
-DB_HOST=mongo
-DB_NAME=agora
+DB_HOST=file
+DB_NAME=podgalego
 IMAGE_CACHE=OFF
-POST_TO_WP=ON
-DOWNLOAD=OFF
+POST_TO_WP=OFF
+DOWNLOAD=ON
